# visa-passport-ai-platform

./: netlify.toml
visa-passport-ai-platform/: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
visa-passport-ai-platform/apps/ocr-service/: Dockerfile  README.md  pyproject.toml  requirements.txt
visa-passport-ai-platform/apps/ocr-service/app/: __init__.py  config.py  main.py
visa-passport-ai-platform/apps/ocr-service/app/routes/: __init__.py  health.py  passport.py
visa-passport-ai-platform/apps/ocr-service/app/schemas/: __init__.py  passport.py
visa-passport-ai-platform/apps/ocr-service/app/services/: __init__.py  confidence.py  image_preprocessing.py  mrz_parser.py  normalization.py  ocr_engine.py  ocr_provider.py
visa-passport-ai-platform/apps/ocr-service/app/services/providers/: aws_textract.py  azure_document_intelligence.py  mock_provider.py
visa-passport-ai-platform/apps/ocr-service/app/utils/: __init__.py  normalization.py
visa-passport-ai-platform/apps/ocr-service/tests/: test_azure_mapping.py  test_confidence.py  test_health.py  test_mrz_parser.py  test_normalization.py  test_passport.py
visa-passport-ai-platform/apps/ocr-service/tests/fixtures/: azure_id_document_passport.json
visa-passport-ai-platform/apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
visa-passport-ai-platform/apps/web/lib/: api.ts  (+3 more)
visa-passport-ai-platform/docs/: api.md  architecture.md  country-rules.md  netlify-deployment.md  ocr.md  security.md
visa-passport-ai-platform/infra/: docker-compose.yml
(+114 files in other folders)
